Alteraçao no login

--- a/cadlogin.html
+++ b/cadlogin.html
@@ -37,7 +37,7 @@
                     <h1>Já sou cliente</h1>
                     <input type="email" placeholder="E-MAIL"><br />
                     <input type="password" placeholder="SENHA"><br />
-                    <span>Esqueci a senha</span><br />
+                    <span><a href="/">Esqueci a senha</a></span><br />
                     <input type="submit" value="LOGAR" class="submit">
                 </form>
             </section>
