--- a/cadastro.html
+++ b/cadastro.html
@@ -36,13 +36,13 @@
         
         
         <div>
-            <input type="text" name="" id="" placeholder="NOME" required=""class="barra nome"/>
+            <input type="text" name="" id="" placeholder="NOME" required class="barra nome"/>
         </div>
         <div>
             <input type="text" name="" id="" placeholder="SOBRENOME" required class="barra sobre"/>
         </div>
         <div>
-            <input type="text" name="" id="" placeholder="E-MAIL" required="" class="barra email">
+            <input type="text" name="" id="" placeholder="E-MAIL" required class="barra email">
         </div>
         <div>
             <input type="password" name="" id="" placeholder="SENHA" required="" class="barra senha"/>
