--- a/cadlogin.html
+++ b/cadlogin.html
@@ -35,8 +35,8 @@
             <section class="login">
                 <form action="./perfil.html" method="get">
                     <h1>Já sou cliente</h1>
-                    <input type="email" placeholder="E-MAIL"><br />
-                    <input type="password" placeholder="SENHA"><br />
+                    <input type="email" placeholder="E-MAIL" required><br />
+                    <input type="password" placeholder="SENHA" required><br />
                     <span><a href="./esqueciSenha.html">Esqueci a senha</a></span><br />
                     <input type="submit" value="LOGAR" class="submit">
                 </form>
