--- a/cadlogin.html
+++ b/cadlogin.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
     </header>
-    <section class="flex-image">
+    <section >
         <!-- Cadastro ou login -->
         <section class="container">
             <section class="login">
